--- a/contactus.html
+++ b/contactus.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-     <meta charset="utf-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head 
          content must come *after* these tags -->
     <title>Boboulo: Contact Us</title>
-        <!-- Bootstrap -->
+    <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -49,9 +49,45 @@
                     </li>
                     <li class="active"><a href="#"><i class="fa fa-envelope-o"></i> Contact</a></li>
                 </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a data-toggle="modal" data-target="#loginModal">
+                            <span class="glyphicon glyphicon-log-in"></span> Login
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
+
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div style="width:50%" class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Login</h4>
+                </div>
+                <div class="modal-body">
+                    <form class="form-inline" role="search">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Email">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Password">
+                        </div>
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox"> Remember me
+                            </label>
+                        </div>
+                        <button type="submit" class="btn btn-info btn-sm">Sign in</button>
+                        <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header class="jumbotron">
 
         <!-- Main component for a primary marketing message or call to action -->
@@ -72,24 +108,24 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-               <ul class="breadcrumb">
-                   <li><a href="index1.html">Home</a></li>
-                   <li class="active">Contact Us</li>
-               </ul>
+                <ul class="breadcrumb">
+                    <li><a href="index1.html">Home</a></li>
+                    <li class="active">Contact Us</li>
+                </ul>
             </div>
             <div class="col-xs-12">
-               <h3>Contact Us</h3>
-               <hr>
+                <h3>Contact Us</h3>
+                <hr>
             </div>
         </div>
-        
+
         <div class="row row-content">
-           <div class="col-xs-12">
-              <h3>Location Information</h3> 
-           </div>
+            <div class="col-xs-12">
+                <h3>Location Information</h3>
+            </div>
             <div class="col-xs-12 col-sm-4 col-sm-offset-1">
-                   <h5>Our Address</h5>
-                    <address style="font-size: 100%">
+                <h5>Our Address</h5>
+                <address style="font-size: 100%">
 		              42, avenue Blanc<br>
 		              1202, Geneve<br>
 		              SUISSE<br>
@@ -104,63 +140,51 @@
             </div>
             <div class="col-xs-12 col-sm-11 col-sm-offset-1">
                 <div class="btn-group" role="group" aria-label="">
-                    <a type="button" class="btn btn-primary"
-                       href="tel:+411234567">
+                    <a type="button" class="btn btn-primary" href="tel:+411234567">
                         <i class="fa fa-phone"></i> Call</a>
                     <a type="button" class="btn btn-info">
                         <i class="fa fa-skype"></i> Skype</a>
-                    <a type="button" class="btn btn-success"
-                       href="mailto:boboulo@boboulo.net">
+                    <a type="button" class="btn btn-success" href="mailto:boboulo@boboulo.net">
                         <i class="fa fa-envelope-o"></i> Email</a>
                 </div>
             </div>
         </div>
 
         <div class="row row-content">
-           <div class="col-xs-12">
-              <h3>Send us your Feedback</h3> 
-           </div>
+            <div class="col-xs-12">
+                <h3>Send us your Feedback</h3>
+            </div>
             <div class="col-xs-12 col-sm-9">
                 <form class="form-horizontal" role="form">
                     <div class="form-group">
-                        <label for="firstname"
-                               class="col-sm-2 control-label">First Name</label>
+                        <label for="firstname" class="col-sm-2 control-label">First Name</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control"
-                            id="firstname" name="firstname" placeholder="Enter First Name"></div>
+                            <input type="text" class="form-control" id="firstname" name="firstname" placeholder="Enter First Name">
+                        </div>
                     </div>
                     <div class="form-group">
-                        <label for="lastname"
-                               class="col-sm-2 control-label">Last Name</label>
+                        <label for="lastname" class="col-sm-2 control-label">Last Name</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control"
-                            id="lastname" name="lastname" placeholder="Enter Last Name"></div>
+                            <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Enter Last Name">
+                        </div>
                     </div>
                     <div class="form-group">
-                        <label for="telnum"
-                               class="col-sm-2 control-label">Contact Tel.</label>
+                        <label for="telnum" class="col-sm-2 control-label">Contact Tel.</label>
                         <div class="col-xs-5 col-sm-4 col-md-3">
                             <div class="input-group">
                                 <div class="input-group-addon">(</div>
-                                    <input type="tel" class="form-control"
-                                           id="areacode" name="areacode"
-                                           placeholder="Area Code">
+                                <input type="tel" class="form-control" id="areacode" name="areacode" placeholder="Area Code">
                                 <div class="input-group-addon">)</div>
                             </div>
                         </div>
                         <div class="col-xs-7 col-sm-6 col-md-7">
-                                <input type="tel" class="form-control"
-                                       id="telnum" name="telnum"
-                                       placeholder="Tel. number">
-                            </div>
+                            <input type="tel" class="form-control" id="telnum" name="telnum" placeholder="Tel. number">
                         </div>
+                    </div>
                     <div class="form-group">
-                        <label for="emailid"
-                               class="col-sm-2 control-label">Email</label>
+                        <label for="emailid" class="col-sm-2 control-label">Email</label>
                         <div class="col-sm-10">
-                            <input type="email" class="form-control"
-                                   id="emailid" name="emailid"
-                                   placeholder="Email">
+                            <input type="email" class="form-control" id="emailid" name="emailid" placeholder="Email">
                         </div>
                     </div>
                     <div class="form-group">
@@ -172,17 +196,17 @@
                         </div>
                         <div class="col-sm-3 col-sm-offset-1">
                             <select class="form-control">
-                            <option>Tel.</option>
-                            <option>Email</option>
-                        </select></div>
+                                <option>Tel.</option>
+                                <option>Email</option>
+                            </select>
+                        </div>
                     </div>
                     <div class="form-group">
                         <label for="feedback" class="col-sm-2 control-label">
-                        Your Feedback
-                    </label>
+                            Your Feedback
+                        </label>
                         <div class="col-sm-10">
-                            <textarea class="form-control" name="feedback" id="feedback"
-                                      rows="12"></textarea>
+                            <textarea class="form-control" name="feedback" id="feedback" rows="12"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
@@ -192,18 +216,18 @@
                             </button>
                         </div>
                     </div>
-            </form>
+                </form>
             </div>
-             <div class="col-xs-12 col-sm-3">
+            <div class="col-xs-12 col-sm-3">
                 <p style="padding:20px;"></p>
             </div>
-       </div>
+        </div>
 
     </div>
 
     <footer class="row-footer">
         <div class="container">
-            <div class="row">             
+            <div class="row">
                 <div class="col-xs-5 col-xs-offset-1 col-sm-2 col-sm-offset-1">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
