--- a/user.html
+++ b/user.html
@@ -134,21 +134,19 @@
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
                 <ul class="nav nav-tabs" role="tablist">
                     <li role="presentation" class="active">
-                        <a href="#perstate" aria-controls="home" role="tab" data-toggle="tab">
+                        <a href="#piechartState" role="tab" data-toggle="tab">
                             applications per states
                         </a></li>
-                    <li role=presentation>
-                        <a href="#percat" aria-controls="profile" role="tab" data-toggle="tab">
+                    <li role="presentation">
+                        <a href="#piechartCategory" role="tab" data-toggle="tab">
                             application per categories
                         </a></li>
                 </ul>
 
                 <div class="tab-content">
-                    <div role="tabpanel" class="tab-pane fade in active" id="perstate">
-                        <div id="piechartState" style="width: 900px; height: 500px;"></div>
+                    <div role="tabpanel" class="tab-pane fade in active" id="piechartState" style="width: 400px; height: 200px;">
                     </div>
-                    <div role="tabpanel" class="tab-pane fade" id="percat">
-                        <div id="piechartCategory" style="width: 900px; height: 500px;"></div>
+                    <div role="tabpanel" class="tab-pane fade" id="piechartCategory">
                     </div>
                 </div>
                 <input id="pieInput" type="text">
