--- a/user.html
+++ b/user.html
@@ -112,16 +112,94 @@
         <div class="container">
             <div class="row row-header">
                 <div class="col-xs-12 col-sm-8">
-                    <h1>Hello user!</h1>
+                    <h1>What is my applications process state?</h1>
                     <p style="padding:40px;"></p>
-                    <p>How are your applications ?</p>
+                    <p>have a global point of view on your applications and select a subset to check the details. Send your new application</p>
                 </div>
                 <div class="col-xs-12 col-sm-4">
+                    <p style="padding: 40px;"></p>
+                    <a type="button" href="#reserve" class="btn btn-warning btn-block" data-toggle="modal" data-target="#applicationModal">
+                        Send Application</a>
                 </div>
             </div>
         </div>
     </header>
 
+    <div id="applicationModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Application</h4>
+                </div>
+                <div class="modal-body">
+                 <form class="form-horizontal" role="form">
+                    <div class="form-group">
+                        <label for="compname" class="col-sm-2 control-label">Company Name</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="compname" name="compname" placeholder="Enter Company Name">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="address" class="col-sm-2 control-label">address</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="address" name="address" placeholder="Enter Address">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="contactname" class="col-sm-2 control-label">Contact Name</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="contactname" name="contactname" placeholder="Enter Contact Name">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="telnum" class="col-sm-2 control-label">Contact Tel.</label>
+                        <div class="col-xs-5 col-sm-4 col-md-3">
+                            <div class="input-group">
+                                <div class="input-group-addon">(</div>
+                                <input type="tel" class="form-control" id="areacode" name="areacode" placeholder="Area Code">
+                                <div class="input-group-addon">)</div>
+                            </div>
+                        </div>
+                        <div class="col-xs-7 col-sm-6 col-md-7">
+                            <input type="tel" class="form-control" id="telnum" name="telnum" placeholder="Tel. number">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="emailid" class="col-sm-2 control-label">Email</label>
+                        <div class="col-sm-10">
+                            <input type="email" class="form-control" id="emailid" name="emailid" placeholder="Email">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="categoryid" class="col-sm-2 control-label">Category</label>
+                        <div class="col-sm-5">
+                            <select class="form-control" id="categoryid" name="categoryid">
+                                <option>Tel.</option>
+                                <option>Email</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="feedback" class="col-sm-2 control-label">
+                            Your cover letter
+                        </label>
+                        <div class="col-sm-10">
+                            <textarea class="form-control" name="feedback" id="feedback" rows="12"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button type="submit" class="btn btn-primary">
+                                Send Application
+                            </button>
+                        </div>
+                    </div>
+                </form>
+               </div>
+            </div>
+        </div>
+    </div>
 
 
     <div class="container">
