--- a/user.html
+++ b/user.html
@@ -130,7 +130,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Application</h4>
+                    <h4 class="modal-title">Application Form</h4>
                 </div>
                 <div class="modal-body">
                  <form class="form-horizontal" role="form">
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="address" class="col-sm-2 control-label">address</label>
+                        <label for="address" class="col-sm-2 control-label">Company Address</label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" id="address" name="address" placeholder="Enter Address">
                         </div>
@@ -174,9 +174,7 @@
                     <div class="form-group">
                         <label for="categoryid" class="col-sm-2 control-label">Category</label>
                         <div class="col-sm-5">
-                            <select class="form-control" id="categoryid" name="categoryid">
-                                <option>Tel.</option>
-                                <option>Email</option>
+                            <select multiple class="form-control" id="categoryid" name="categoryid">
                             </select>
                         </div>
                     </div>
@@ -304,6 +302,7 @@
     </footer>
 
 
+    <script src="js/userApp.js"></script>
     <script src="js/fireStorage.js"></script>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="js/updatechart.js"></script>
