--- a/user.html
+++ b/user.html
@@ -50,7 +50,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Boboulo</a>
+                <a class="navbar-brand" href="index1.html">Boboulo</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -133,7 +133,7 @@
                     <h4 class="modal-title">Application Form</h4>
                 </div>
                 <div class="modal-body">
-                    <form class="form-horizontal" role="form">
+                    <form id="sendapplication" class="form-horizontal" role="form">
                         <div class="form-group">
                             <label for="compname" class="col-sm-2 control-label">Company Name</label>
                             <div class="col-sm-10">
@@ -179,11 +179,11 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="feedback" class="col-sm-2 control-label">
+                            <label for="letter" class="col-sm-2 control-label">
                                 Your cover letter
                             </label>
                             <div class="col-sm-10">
-                                <textarea class="form-control" name="feedback" id="feedback" rows="12"></textarea>
+                                <textarea class="form-control" name="letter" id="letter" rows="12"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
@@ -290,7 +290,6 @@
             </div>
         </div>
     </footer>
-
 
     <script src="js/userApp.js"></script>
     <script src="js/fireStorage.js"></script>
