--- a/user.html
+++ b/user.html
@@ -12,7 +12,6 @@
     <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 
     <script src="js/init.js"></script>
-    <script src="js/static.js"></script>
 
 
 
@@ -85,9 +84,9 @@
                     <h4 class="modal-title">Login</h4>
                 </div>
                 <div class="modal-body">
-                    <form class="form-inline" role="search">
+                    <form id="loginform" class="form-inline" role="search">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Email">
+                            <input id="loginEmail" type="text" class="form-control" placeholder="Email">
                         </div>
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Password">
@@ -97,7 +96,7 @@
                                 <input type="checkbox"> Remember me
                             </label>
                         </div>
-                        <button type="submit" class="btn btn-info btn-sm">Sign in</button>
+                        <div id="loginmodalsubmit" class="btn btn-info btn-sm">Sign in</div>
                         <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
                     </form>
                 </div>
@@ -118,7 +117,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-4">
                     <p style="padding: 40px;"></p>
-                    <a type="button" href="#reserve" class="btn btn-warning btn-block" data-toggle="modal" data-target="#applicationModal">
+                    <a type="button" class="btn btn-warning btn-block" data-toggle="modal" data-target="#applicationModal">
                         Send Application</a>
                 </div>
             </div>
@@ -188,9 +187,9 @@
                         </div>
                         <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-primary">
+                                <div id="sendapplicationsubmit" class="btn btn-primary">
                                     Send Application
-                                </button>
+                                </div>
                             </div>
                         </div>
                     </form>
@@ -225,8 +224,6 @@
                     <div role="tabpanel" class="tab-pane fade" id="piechartCategory">
                     </div>
                 </div>
-                <input id="pieInput" type="text">
-                <button id="pieBtn">OK</button>
             </div>
         </div>
 
@@ -291,14 +288,15 @@
         </div>
     </footer>
 
+    <script src="js/static.js"></script>
     <script src="js/userApp.js"></script>
     <script src="js/fireStorage.js"></script>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="js/updatechart.js"></script>
-    <script src="js/applicationsList.js"></script>
     <script src="js/mainController.js"></script>
     <script src="js/googlemap.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2POV4QB0x48pf1YHsts9bX49P6eVMiOU&callback=initMap" async defer></script>
+    <script src="js/applicationsList.js"></script>
 
 
 </body>
