--- a/user.html
+++ b/user.html
@@ -67,8 +67,8 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a data-toggle="modal" data-target="#loginModal">
-                            <span class="glyphicon glyphicon-log-in"></span> Login
+                        <a id="loginnavbar" data-toggle="modal" data-target="#loginModal">
+                            <span  class="glyphicon glyphicon-log-in"></span> Login
                         </a>
                     </li>
                 </ul>
