--- a/index1.html
+++ b/index1.html
@@ -63,7 +63,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a data-toggle="modal" data-target="#loginModal">
+                        <a id="loginnavbar" data-toggle="modal" data-target="#loginModal">
                             <span class="glyphicon glyphicon-log-in"></span> Login
                         </a>
                     </li>
@@ -72,7 +72,7 @@
         </div>
     </nav>
 
-   <div id="loginModal" class="modal fade" role="dialog">
+    <div id="loginModal" class="modal fade" role="dialog">
         <div style="width:50%" class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -140,7 +140,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="img/googlemap.jpg" width="50%" height="50%"  alt="Location">
+                            <img class="img-responsive" src="img/googlemap.jpg" width="50%" height="50%" alt="Location">
                             <div class="carousel-caption">
                                 <h2 class="media-heading">Locate your applications</h2>
                                 <p>Locate your application and easily grab detail informations about it.</p>
@@ -150,7 +150,7 @@
                             <img class="img-responsive" src="img/jobappform.png" alt="Alberto Somayya">
                             <div class="carousel-caption">
                                 <h2>Send Applications!</h2>
-                                <p>Call,  Email, Skype, ...</p>
+                                <p>Call, Email, Skype, ...</p>
                             </div>
                         </div>
                     </div>
@@ -236,6 +236,8 @@
             });
         });
     </script>
+    <script src="js/userlogin.js"></script>
+
 
 
 </body>
