--- a/user.html
+++ b/user.html
@@ -288,6 +288,7 @@
         </div>
     </footer>
 
+    <script src="js/userlogin.js"></script>
     <script src="js/static.js"></script>
     <script src="js/userApp.js"></script>
     <script src="js/fireStorage.js"></script>
