--- a/contactus.html
+++ b/contactus.html
@@ -51,7 +51,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a data-toggle="modal" data-target="#loginModal">
+                        <a id="loginnavbar" data-toggle="modal" data-target="#loginModal">
                             <span class="glyphicon glyphicon-log-in"></span> Login
                         </a>
                     </li>
@@ -60,7 +60,7 @@
         </div>
     </nav>
 
-   <div id="loginModal" class="modal fade" role="dialog">
+    <div id="loginModal" class="modal fade" role="dialog">
         <div style="width:50%" class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -270,6 +270,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/userlogin.js"></script>
+
 </body>
 
 </html>
