--- a/user.html
+++ b/user.html
@@ -111,9 +111,9 @@
         <div class="container">
             <div class="row row-header">
                 <div class="col-xs-12 col-sm-8">
-                    <h1>What is my applications process state?</h1>
+                    <h1>Boboulo shows applications process state</h1>
                     <p style="padding:40px;"></p>
-                    <p>have a 40'000 feet view on your applications. Check location. Select a subset for more details or send your new application</p>
+                    <p>have a 40'000 feet view on your applications. Check location. Select a subset for more details or send your new application. Share information with your peers</p>
                 </div>
                 <div class="col-xs-12 col-sm-4">
                     <p style="padding: 40px;"></p>
