--- a/aboutus.html
+++ b/aboutus.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head 
          content must come *after* these tags -->
-    <title>Ristorante Con Fusion: About Us</title>
+    <title>Boboulo: About Us</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
@@ -135,9 +135,9 @@
         <div class="row row-content">
             <div class="col-xs-12">
                 <h2>The team</h2>
-                <h3>Peter Pan <small>One guy</small></h3>
-                <p>Peter is a blablba </p>
-                <h3>Dhanasekaran Witherspoon <small>another guy</small></h3>
+                <h3>David Kony <small>One guy</small></h3>
+                <p>David is a blablba </p>
+                <h3>Mick Kony <small>another guy</small></h3>
                 <p>bla bfadfbadfba fbadbf adfbadfb abafb </p>
             </div>
             <div>
