--- a/index1.html
+++ b/index1.html
@@ -109,7 +109,7 @@
                 <div class="col-xs-12 col-sm-8">
                     <h1>Boboulo manage your applications!</h1>
                     <p style="padding:40px;"></p>
-                    <p>This tool helps people looking for a job to manage the applications they perform. Among the features available, users can easily create a new application and easily search/access to the data of any of his applications. In addition, the adviser can access to the applications of people he supports. In a futur version a page dedicated for employer should be added </p>
+                    <p>This tool helps people looking for a job to manage the applications they perform. Among the features available, users can easily create a new application and easily search/access to the data of any of his applications. Friends applications can also be consulted in order to grab information about companies you want to apply. In addition, the adviser can access to the applications of people he supports. In a futur version a page dedicated for employer should be added </p>
                 </div>
                 <div class="col-xs-12 col-sm-4">
                 </div>
