--- a/user.html
+++ b/user.html
@@ -11,8 +11,8 @@
     <script src="js/bootstrap.min.js"></script>
     <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 
 
     <script src="js/init.js"></script>
@@ -105,6 +105,35 @@
             </div>
         </div>
     </div>
+
+    <div id="stateModal" class="modal fade" role="dialog">
+        <div style="width:50%" class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Change State</h4>
+                </div>
+                <div class="modal-body">
+                    <form id="stateform" class="form-inline" role="search">
+                        <div class="form-group">
+                            <label class="radio-inline">
+                                <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> ongoing
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> accepted
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> rejected
+                            </label>
+                        </div>
+                        <div id="statemodalsubmit" class="btn btn-info btn-sm">Ok</div>
+                        <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <header class="jumbotron">
 
