app change state

--- a/user.html
+++ b/user.html
@@ -117,13 +117,13 @@
                     <form id="stateform" class="form-inline" role="search">
                         <div class="form-group">
                             <label class="radio-inline">
-                                <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> ongoing
+                                <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="ongoing"> ongoing
                             </label>
                             <label class="radio-inline">
-                                <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> accepted
+                                <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="accepted"> accepted
                             </label>
                             <label class="radio-inline">
-                                <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> rejected
+                                <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="rejected"> rejected
                             </label>
                         </div>
                         <div id="statemodalsubmit" class="btn btn-info btn-sm">Ok</div>
