change state at runtime

--- a/user.html
+++ b/user.html
@@ -115,17 +115,7 @@
                 </div>
                 <div class="modal-body">
                     <form id="stateform" class="form-inline" role="search">
-                        <div class="form-group">
-                            <label class="radio-inline">
-                                <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="ongoing"> ongoing
-                            </label>
-                            <label class="radio-inline">
-                                <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="accepted"> accepted
-                            </label>
-                            <label class="radio-inline">
-                                <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="rejected"> rejected
-                            </label>
-                        </div>
+                        <div class="form-group"></div>
                         <div id="statemodalsubmit" class="btn btn-info btn-sm">Ok</div>
                         <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
                     </form>
